--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: rgb(58, 32, 18);">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">iCoder</a>
+      <a class="navbar-brand" href="/iCoderBlog/">iCoder</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -26,10 +26,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/">Home</a>
+            <a class="nav-link active" aria-current="page" href="/iCoderBlog/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about.html">About</a>
+            <a class="nav-link" href="/iCoderBlog/about.html">About</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
@@ -47,7 +47,7 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/contact.html">Contact Us</a>
+            <a class="nav-link" href="/iCoderBlog/contact.html">Contact Us</a>
           </li>
 
         </ul>
